--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button type="button" onclick="locationSearch()" class="sbt me-3"><i class="fa-solid fa-magnifying-glass"></i></button type="button" class="sbt">
                 <input  type="text" id="data" name="" placeholder="Enter your location">
             </div>
-           <div class="locbt"> <button type="button" class="cbtn text-white text-center mt-3"><i class="fa-solid fa-location-dot me-2"></i><span>Current Location</span></button></div>
+           <div class="locbt" id="getloc"> <button type="button" class="cbtn text-white text-center mt-3"><i class="fa-solid fa-location-dot me-2"></i><span>Current Location</span></button></div>
 
         
                 
@@ -81,4 +81,5 @@
     }
 
 </script>
+<script src="./currenLoc.js"></script>
 </html>
